--- a/src/gardener/Properties/Strings.resx
+++ b/src/gardener/Properties/Strings.resx
@@ -118,12 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Applicationforleaseofinpremises" xml:space="preserve">
-    <value>Заявка на сдачу помещения</value>
-    <comment>Заявка на сдачу помещения</comment>
+    <value>Сдать помещение</value>
+    <comment>Сдать помещение</comment>
   </data>
   <data name="Applicationforleaseofpremises" xml:space="preserve">
-    <value>Заявка на аренду помещения</value>
-    <comment>Заявка на аренду помещения</comment>
+    <value>Арендовать помещение</value>
+    <comment>Арендовать помещение</comment>
   </data>
   <data name="Applicationformforleaseofinpremises" xml:space="preserve">
     <value>Форма заявки на аренду помещения</value>
