--- a/src/gardener/Properties/Strings.zh.resx
+++ b/src/gardener/Properties/Strings.zh.resx
@@ -118,12 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Applicationforleaseofinpremises" xml:space="preserve">
-    <value>出租申请</value>
-    <comment>Заявка на сдачу помещения</comment>
+    <value>商铺出租</value>
+    <comment>Сдать помещение</comment>
   </data>
   <data name="Applicationforleaseofpremises" xml:space="preserve">
-    <value>求租申请</value>
-    <comment>Заявка на аренду помещения</comment>
+    <value>求租商铺</value>
+    <comment>Арендовать помещение</comment>
   </data>
   <data name="Applicationformforleaseofinpremises" xml:space="preserve">
     <value>求租申请表</value>
