--- a/src/gardener/Properties/Strings.vi.resx
+++ b/src/gardener/Properties/Strings.vi.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AcquisitionOfRights" xml:space="preserve">
+    <value>Mua quyền sở dụng</value>
+    <comment>Приобретение прав</comment>
+  </data>
   <data name="Applicationforleaseofinpremises" xml:space="preserve">
     <value>Cho thuê chỗ</value>
     <comment>Сдать помещение</comment>
@@ -132,6 +136,10 @@
   <data name="Applicationformforleaseofpremises" xml:space="preserve">
     <value>Mẫu đơn cho thuê cửa hàng</value>
     <comment>Форма заявки на сдачу в аренду помещения</comment>
+  </data>
+  <data name="AssignmentOfRights" xml:space="preserve">
+    <value>Chuyển nhượng lại quyền sử dụng</value>
+    <comment>Переуступка прав</comment>
   </data>
   <data name="Attention" xml:space="preserve">
     <value>Chú ý</value>
@@ -213,6 +221,10 @@
     <value>Chọn lựa bước tiếp theo</value>
     <comment>Выбор действия</comment>
   </data>
+  <data name="LogOut" xml:space="preserve">
+    <value>Đi ra ngoài</value>
+    <comment>Выйти</comment>
+  </data>
   <data name="Map" xml:space="preserve">
     <value>Sơ đồ khu thương mại</value>
     <comment>Схема рынка</comment>
@@ -272,6 +284,10 @@
   <data name="SelectFloor" xml:space="preserve">
     <value>Chọn tầng</value>
     <comment>Выбор этажа</comment>
+  </data>
+  <data name="SelectPlace" xml:space="preserve">
+    <value>chọn chỗ bán hàng</value>
+    <comment>Выберите место</comment>
   </data>
   <data name="Selling" xml:space="preserve">
     <value>Gọi thợ sửa chữa (Laion)</value>
