--- a/src/gardener/Properties/Strings.resx
+++ b/src/gardener/Properties/Strings.resx
@@ -121,6 +121,10 @@
     <value>Приобретение прав</value>
     <comment>Приобретение прав</comment>
   </data>
+  <data name="ApplicationForAssignmentIsAccepted" xml:space="preserve">
+    <value>Ваша заявка на переуступку прав принята.</value>
+    <comment>Ваша заявка на переуступку прав принята.</comment>
+  </data>
   <data name="Applicationforleaseofinpremises" xml:space="preserve">
     <value>Сдать помещение</value>
     <comment>Сдать помещение</comment>
@@ -136,6 +140,14 @@
   <data name="Applicationformforleaseofpremises" xml:space="preserve">
     <value>Форма заявки на сдачу в аренду помещения</value>
     <comment>Форма заявки на сдачу в аренду помещения</comment>
+  </data>
+  <data name="ApplicationForSurrenderIsAccepted" xml:space="preserve">
+    <value>Ваша заявка на сдачу принята.</value>
+    <comment>Ваша заявка на сдачу принята.</comment>
+  </data>
+  <data name="ApplicationToAcquireRightsIsAccepted" xml:space="preserve">
+    <value>Ваша заявка на приобретение прав принята.</value>
+    <comment>Ваша заявка на приобретение прав принята.</comment>
   </data>
   <data name="AssignmentOfRights" xml:space="preserve">
     <value>Переуступка прав</value>
@@ -212,6 +224,10 @@
   <data name="LastName" xml:space="preserve">
     <value>Фамилия</value>
     <comment>Фамилия</comment>
+  </data>
+  <data name="LeasingApplicationIsAccepted" xml:space="preserve">
+    <value>Ваша заявка на аренду принята. Вам перезвонит менеджер.</value>
+    <comment>Ваша заявка на аренду принята. Вам перезвонит менеджер.</comment>
   </data>
   <data name="Listofavailablepremises" xml:space="preserve">
     <value>Список свободных помещений</value>
